fix version incompatibility