@@ -573,7 +573,7 @@ public class HibernateORMSession implements ORMSession {
 			return query.list();
 		}
 		// update
-		return new Double(query.executeUpdate());
+		return Double.valueOf(query.executeUpdate());
 	}
 
 	private Object uniqueResult(org.hibernate.Query query) throws PageException {
